--- a/queda.html
+++ b/queda.html
@@ -550,13 +550,13 @@
             <p>A queda livre é o movimento de um objeto sob a influência exclusiva da gravidade. Na ausência de resistência do ar, todos os objetos caem com a mesma aceleração, independentemente de sua massa, como demonstrado por Galileu em sua famosa experiência na Torre de Pisa.</p>
             
             <div class="formula">
-                y = y₀ + v₀t + ½gt²
+                s = s₀ + v₀t + ½gt²
             </div>
             
             <p>Onde:</p>
             <ul style="margin-left: 20px; margin-top: 10px;">
-                <li><strong>y</strong> = Posição final (m)</li>
-                <li><strong>y₀</strong> = Posição inicial (m)</li>
+                <li><strong>s</strong> = Posição final (m)</li>
+                <li><strong>s₀</strong> = Posição inicial (m)</li>
                 <li><strong>v₀</strong> = Velocidade inicial (m/s)</li>
                 <li><strong>g</strong> = Aceleração da gravidade (9,8 m/s²)</li>
                 <li><strong>t</strong> = Tempo (s)</li>
