--- a/java/index.html
+++ b/java/index.html
@@ -417,7 +417,7 @@
             <div class="topic-card string">
                 <h3><span class="icon">📝</span> Manipulação de Strings</h3>
                 <p>Aprenda a trabalhar com textos em Java. Domine os principais métodos para manipulação de strings, como concatenação, busca, substituição e formatação.</p>
-                <a href="string.html" class="btn">Acessar Módulo</a>
+                <a href="strings.html" class="btn">Acessar Módulo</a>
             </div>
             
             <div class="topic-card modular">
